--- a/.github/workflows/stable-windows.yml
+++ b/.github/workflows/stable-windows.yml
@@ -13,6 +13,12 @@ jobs:
       SHOULD_BUILD: yes
       CI_BUILD: no
       ASSETS_REPOSITORY: ${{ github.repository }}
+      # ---------------------------------------------------
+      # FIX: Hardcoded version to bypass "Exit Code 22" (Network Error)
+      # VS Code 1.95.3 (Stable Release)
+      MS_TAG: "1.95.3"
+      MS_COMMIT: "f1a4fb981f49533d7c6d6ae35073805ee8a00219"
+      # ---------------------------------------------------
     
     steps:
       - uses: actions/checkout@v4
@@ -30,11 +36,12 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install -g node-gyp
-          # ?? ??? ????? ?????? ???? ??? ??????? ???
+          # ?? ??? ????? ??????
 
       - name: Prepare Build
         shell: bash
         run: |
+          # ??? ???? ????? ??????? ?????? ???????? ??? ???????? ????? ?????
           ./get_repo.sh
           ./prepare_vscode.sh
 
