Fix: Bypass get_repo.sh script and clone manually

--- a/.github/workflows/stable-windows.yml
+++ b/.github/workflows/stable-windows.yml
@@ -13,12 +13,8 @@ jobs:
       SHOULD_BUILD: yes
       CI_BUILD: no
       ASSETS_REPOSITORY: ${{ github.repository }}
-      # ---------------------------------------------------
-      # FIX: Hardcoded version to bypass "Exit Code 22" (Network Error)
-      # VS Code 1.95.3 (Stable Release)
       MS_TAG: "1.95.3"
       MS_COMMIT: "f1a4fb981f49533d7c6d6ae35073805ee8a00219"
-      # ---------------------------------------------------
     
     steps:
       - uses: actions/checkout@v4
@@ -36,13 +32,25 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install -g node-gyp
-          # ?? ??? ????? ??????
+
+      # -------------------------------------------------------
+      # ??????? ?????? ???: ????? ???? ????? ?? ???????? ??????
+      # -------------------------------------------------------
+      - name: Manual Clone VS Code (Bypass Network Check)
+        shell: bash
+        run: |
+          echo "?? Manually cloning VS Code 1.95.3..."
+          git clone https://github.com/microsoft/vscode.git vscode
+          cd vscode
+          git checkout f1a4fb981f49533d7c6d6ae35073805ee8a00219
+          cd ..
+          echo "? Source code ready."
 
       - name: Prepare Build
         shell: bash
         run: |
-          # ??? ???? ????? ??????? ?????? ???????? ??? ???????? ????? ?????
-          ./get_repo.sh
+          # ?? ??? ./get_repo.sh ???? ???? ???????
+          # ???? ????? ????? ???????
           ./prepare_vscode.sh
 
       - name: Build Alkemi
